boost1.60 (1.60.0+dfsg-1) UNRELEASED; urgency=medium

  * New upstream version.  Closes: #809228.

  * control: Updated for 1.60 using update-control.py.

  * copyright: Exclude *.js in repacked tarball to satisfy the pedants.
    - patches/provide-missing-source-jquery.patch: Remove since patched
      file no longer present.

  * patches/chrono-duration.patch: 
  * patches/fix-ftbfs-python-3.3.patch:
  * patches/hppa-long-double-config.patch:
  * patches/no-gcc-march-options.patch:
  * patches/ppc64el-fp_traits-ibm-long-double.patch: Refreshed.

  * patches/pythonid.patch: Replaced by patches from upstream ticket.

  * patches/0002-Fix-a-regression-with-non-constexpr-types.patch:
  * patches/ec60c37295146bb80aa44a92cf416027b75b5ff7.patch:
  * patches/numeric-ublas-storage.hpp.patch:
  * patches/openssl-no-ssl3.patch: Remove.  Applied upstream.

  * patches/mpi-allocator-c++0x.patch: Drop gcc-4.x patch since gcc 4 not
    supported.

  * rules: Don't filter out the python 2.7 version when building
    user-config.jam.  Remove long-obsolete references to library "variant"
    (formerly was single/multi threaded, debug/release).

 -- Steve M. Robbins <smr@debian.org>  Mon, 29 Feb 2016 23:04:45 -0600

boost1.58 (1.58.0+dfsg-5) unstable; urgency=medium

  * Build Coroutine shared lib.  Closes: #802509.
  * patches/no-gcc-march-options.patch: New.  Don't use -march=i686 for
    x86 32-bit.  Closes: #794622.

 -- Steve M. Robbins <smr@debian.org>  Mon, 28 Dec 2015 00:19:48 -0600

boost1.58 (1.58.0+dfsg-4.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Add patch to replace minified jquery with its non-minified version, as the
  * source was missing. (Closes: #735353)

 -- Tobias Frost <tobi@debian.org>  Sat, 21 Nov 2015 14:24:59 +0100

boost1.58 (1.58.0+dfsg-4) unstable; urgency=medium

  * Team upload.
  * patches/openssl-no-ssl3.patch. Throw exception if sslv3 context
    requested but OPENSSL_NO_SSL3 defined (Closes: #803881).
