@@ -3,6 +3,7 @@ boost1.60 (1.60.0+dfsg-1) UNRELEASED; urgency=medium
   * New upstream version.  Closes: #809228.
 
   * control: Updated for 1.60 using update-control.py.
+    - Add packages for type-erasure.
 
   * copyright: Exclude *.js in repacked tarball to satisfy the pedants.
     - patches/provide-missing-source-jquery.patch: Remove since patched
@@ -28,7 +29,7 @@ boost1.60 (1.60.0+dfsg-1) UNRELEASED; urgency=medium
     user-config.jam.  Remove long-obsolete references to library "variant"
     (formerly was single/multi threaded, debug/release).
 
- -- Steve M. Robbins <smr@debian.org>  Mon, 29 Feb 2016 23:04:45 -0600
+ -- Steve M. Robbins <smr@debian.org>  Thu, 10 Mar 2016 01:27:03 -0600
 
 boost1.58 (1.58.0+dfsg-5) unstable; urgency=medium
 
